# src/components/comments/comments.controller.ts
@@ -14,6 +14,31 @@ const openaiInstance = new OpenAI({ apiKey: process.env.OPENAI_SECRET_KEY });
 @Tags("Comments")
 export class CommentsController extends Controller {
     /**
+     * @summary For user Get summarize for all comments. Use ChatGPT API
+     * @returns {Promise<any>} 200 - Return message and status
+     * @returns {Promise<any>} 400 - Return error message
+     */
+    @Get("summarize")
+    public async summarizeComments(@Request() request: any): Promise<any> {
+        try {
+            const response = await openaiInstance.completions.create({
+                model: 'gpt-3.5-turbo-instruct', // Chọn mô hình ChatGPT
+                prompt: 'Tổng hợp lại toàn bộ array bình luận dưới đây ngắn gọn nhưng đầy đủ ý nghĩa nhất: ["Ù ôi xuất sắc, lần đầu ăn miến trộn nên thấy lươn giòn rụm trộn với gia vị ăn đã dễ sợ. Nước sấu chua ngọt có thêm gừng dập ngon xỉu. 2 tô 2 nước chỉ 110k quá ổn.","Chả, nem, miến đều ổn, không quá xuất sắc nhưng ăn cũng tạm, phục vụ nhanh, quán rộng rãi","Chỉ coá lươn chiên khá khô, lần sau ra phải thử lươn mềm hơn mới được","1 tô giá tầm 30k, ăn hơi ít :) lươn cũng hơi ít nhưng với vị trí như vậy cũng chấp nhận đc,miến ăn cực vừa vặn từ miến trộn tới miến nước , mềm dai đúng độ luôn vừa tới,cơ mà chả lươn ăn cũng bt ko quá đặc sắc"]',
+                max_tokens: 300, // Số lượng từ tối đa trong kết quả
+            });
+
+            const summary = response.choices[0].text.trim();
+            console.log(summary)
+            return summary;
+        }
+        catch (err) {
+            this.setStatus(500);
+            console.log(err)
+            return failedResponse('Execute service went wrong', 'ServiceException');
+        }
+    }
+
+    /**
      * @returns {Promise<any>} 200 - Return message and status
      * @returns {Promise<any>} 400 - Return error message
      */
@@ -76,9 +101,9 @@ export class CommentsController extends Controller {
             const commentsByFood = await Comments.find({ foodId: data.foodId });
             let prompt = 'Tóm tắt list bình luận về món ăn sau: ['
             commentsByFood.forEach((item) => {
-                prompt = prompt + item.description + ","; 
+                prompt = prompt + item.description + ",";
             })
-            prompt += data.description + "]";  
+            prompt += data.description + "]";
             console.log(prompt)
 
             //Summarize all comments of food
@@ -114,31 +139,6 @@ export class CommentsController extends Controller {
         }
         catch (err) {
             this.setStatus(500);
-            return failedResponse('Execute service went wrong', 'ServiceException');
-        }
-    }
-
-    /**
-     * @summary For user Get summarize for all comments. Use ChatGPT API
-     * @returns {Promise<any>} 200 - Return message and status
-     * @returns {Promise<any>} 400 - Return error message
-     */
-    @Get("summarize")
-    public async summarizeComments(@Request() request: any): Promise<any> {
-        try {
-            const response = await openaiInstance.completions.create({
-                model: 'gpt-3.5-turbo-instruct', // Chọn mô hình ChatGPT
-                prompt: 'Tổng hợp lại toàn bộ array bình luận dưới đây ngắn gọn nhưng đầy đủ ý nghĩa nhất: ["Ù ôi xuất sắc, lần đầu ăn miến trộn nên thấy lươn giòn rụm trộn với gia vị ăn đã dễ sợ. Nước sấu chua ngọt có thêm gừng dập ngon xỉu. 2 tô 2 nước chỉ 110k quá ổn.","Chả, nem, miến đều ổn, không quá xuất sắc nhưng ăn cũng tạm, phục vụ nhanh, quán rộng rãi","Chỉ coá lươn chiên khá khô, lần sau ra phải thử lươn mềm hơn mới được","1 tô giá tầm 30k, ăn hơi ít :) lươn cũng hơi ít nhưng với vị trí như vậy cũng chấp nhận đc,miến ăn cực vừa vặn từ miến trộn tới miến nước , mềm dai đúng độ luôn vừa tới,cơ mà chả lươn ăn cũng bt ko quá đặc sắc"]',
-                max_tokens: 300, // Số lượng từ tối đa trong kết quả
-            });
-
-            const summary = response.choices[0].text.trim();
-            console.log(summary)
-            return summary;
-        }
-        catch (err) {
-            this.setStatus(500);
-            console.log(err)
             return failedResponse('Execute service went wrong', 'ServiceException');
         }
     }
