# src/components/sellers/sellers.controller.ts
@@ -7,6 +7,37 @@ import { IShopStatusUpdate } from "./sellers.types";
 @Route("sellers")
 @Tags("Sellers")
 export class SellerController extends Controller {
+
+    /**
+     * @summary OPEN/CLOSE SHOP (Only seller can)
+     * @param {ISellerUpdate} body - Shop's status
+     * @returns {Promise<any>} 200 - Return message and status
+     * @returns {Promise<any>} 400 - Return error message
+     */
+    @Security('jwt', ['seller'])
+    @Get('/shop-status')
+    public async getShopStatus(@Request() request: any): Promise<any> {
+        try {
+            //get userId from token
+            const token = request.headers.authorization.split(' ')[1];
+            const userInfo = await User.getUserProfile(token);
+            if (!userInfo) {
+                this.setStatus(401);
+                return failedResponse('Unauthorized', 'Unauthorized');
+            }
+            //check seller exist
+            const seller = await Seller.findOne({ userId: userInfo._id });
+            if (!seller) {
+                this.setStatus(400);
+                return failedResponse('Người bán hàng không hợp lệ', 'BadRequest');
+            }
+            return successResponse(seller.shopStatus);
+        } catch (error) {
+            this.setStatus(500);
+            return failedResponse('Execute service went wrong', 'ServiceException');
+        }
+    }
+
     /**
      * @summary OPEN/CLOSE SHOP (Only seller can)
      * @param {ISellerUpdate} body - Shop's status
@@ -43,36 +74,6 @@ export class SellerController extends Controller {
                 status: shopStatus
             }
             return successResponse(result);
-        } catch (error) {
-            this.setStatus(500);
-            return failedResponse('Execute service went wrong', 'ServiceException');
-        }
-    }
-
-    /**
-     * @summary OPEN/CLOSE SHOP (Only seller can)
-     * @param {ISellerUpdate} body - Shop's status
-     * @returns {Promise<any>} 200 - Return message and status
-     * @returns {Promise<any>} 400 - Return error message
-     */
-    @Security('jwt', ['seller'])
-    @Get('/shop-status')
-    public async getShopStatus(@Request() request: any): Promise<any> {
-        try {
-            //get userId from token
-            const token = request.headers.authorization.split(' ')[1];
-            const userInfo = await User.getUserProfile(token);
-            if (!userInfo) {
-                this.setStatus(401);
-                return failedResponse('Unauthorized', 'Unauthorized');
-            }
-            //check seller exist
-            const seller = await Seller.findOne({ userId: userInfo._id });
-            if (!seller) {
-                this.setStatus(400);
-                return failedResponse('Người bán hàng không hợp lệ', 'BadRequest');
-            }
-            return successResponse(seller.shopStatus);
         } catch (error) {
             this.setStatus(500);
             return failedResponse('Execute service went wrong', 'ServiceException');
